[package]
name = "mecha-edge-bluetooth"
version = "0.1.0"
edition = "2021"
repository = " https://github.com/Dhruvesh08/mecha-edge-bluetooth.git"
homepage = " https://github.com/Dhruvesh08/mecha-edge-bluetooth.git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "0.10", features = ["serde"] }
futures = "0.3.28"
log = "0.4.20"
pretty_env_logger = "0.5.0"
tokio = { version = "1.32.0", features = ["full"] }
